# onoro-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  profile.sh  test.rs  test.txt  xterm-256color.ti
.cargo/: config.toml
.github/workflows/: build-client.yml  format-client.yml  lint-client.yml  test-onoro.yml
.vim/: coc-settings.json
abstract_game/: Cargo.toml
abstract_game/src/: game.rs  lib.rs  packed_score.rs  score.rs  simple_solver.rs  solver.rs  util.rs
abstract_game/src/test_games/: connect_n.rs  mod.rs  nim.rs  tic_tac_toe.rs
abstract_game/tests/: connect_three.rs  tic_tac_toe.rs
ai_gen_onoro/: Cargo.toml
ai_gen_onoro/src/: ai_onoro.rs  lib.rs
algebra/src/: finite.rs  lib.rs  monoid.rs  ordinal.rs  product.rs  semigroup.rs
algebra/src/group/: group.rs  mod.rs
algebra/src/group/types/: cyclic.rs  dihedral.rs  mod.rs  trivial.rs
benches/: README.md  cooperate.rs  onoro.rs  onoro_view.rs  solve.rs
cardinality_estimate/: Cargo.toml
cardinality_estimate/src/: main.rs
cooperate/: Cargo.toml  output.txt
cooperate/src/: array.rs  cooperate.rs  global_data.rs  lib.rs  metrics.rs  null_lock.rs  queue.rs  search.rs  search_worker.rs  serial_search.rs  stack.rs  table.rs  transparent_iterator.rs  util.rs
cooperate/src/test/: gomoku.rs  mod.rs  nim.rs  search.rs  serial_search.rs  table.rs  tic_tac_toe.rs
onoro/: Cargo.toml
onoro/.cargo/: config.toml
onoro/src/: canonicalize.rs  color_print.rs  compress.rs  const_rand.rs  error.rs  groups.rs  hash.rs  hex_pos.rs  lib.rs  move.rs  onoro.rs  onoro_defs.rs  onoro_impl.rs  onoro_initialize.rs  onoro_state.rs  onoro_util.rs  onoro_view.rs  packed_idx.rs  score.rs  test_util.rs  tile_hash.rs  util.rs
onoro/src/game/: canonicalize.rs  error.rs  hex_pos.rs  mod.rs  move.rs  onoro.rs  onoro_state.rs  packed_hex_pos.rs  packed_idx.rs  packed_score.rs  score.rs
onoro/src/hash/: mod.rs  tile_hash.rs
onoro_impl/: Cargo.toml
onoro_impl/src/: benchmark_util.rs  board_vec_indexer.rs  canonical_view.rs  canonicalize.rs  const_rand.rs  hash.rs  lib.rs  move.rs  num_iter.rs  onoro.rs  onoro_defs.rs  onoro_state.rs  onoro_view.rs  p1_move_gen.rs  p2_move_gen.rs  packed_hex_pos.rs  packed_idx.rs  pawn_list.rs  test_util.rs  tile_hash.rs  util.rs
proto/: game_state.proto
server/: Cargo.toml  build.rs  test.rs
server/.vim/: coc-settings.json
server/src/: error.rs  file_server.rs  initialize.rs  main.rs  proto.rs  socket_init.rs
simple_onoro/: Cargo.toml
simple_onoro/src/: lib.rs  simple_onoro.rs
src/: main.rs  metrics.rs  onoro_table.rs  par_search.rs  par_search_opts.rs  passthrough_hasher.rs  search.rs
tests/: default_start.rs  each_move.rs  equal_views.rs  exploration_test.rs  get_tile.rs  make_move.rs  onoro_test.rs
union_find/: Cargo.toml
union_find/src/: const_union_find.rs  lib.rs  union_find.rs
web/: .eslintrc.json  .prettierignore  .prettierrc.js  babel.config.js  eslint-local-rules.js  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
web/html/: index_template.html
web/lint/: disallow-relative-imports.js
web/src/: App.tsx  index.tsx
web/src/components/: Circle.tsx  HexGrid.tsx
web/src/onoro/: OnoroBoard.tsx  socket_msgs.tsx
web/src/util/: async_sockets.ts  status.ts
