[package]
name = "onoro-rs"
version = "0.1.0"
edition = "2021"

[features]
profiled = []

[dependencies]
abstract_game = { path = "./abstract_game" }
ai_gen_onoro = { path = "./ai_gen_onoro" }
algebra = { path = "./algebra" }
dashmap = "5.5"
multiqueue = "0.3"
cooperate = { path = "./cooperate" }
onoro = { path = "./onoro" }
onoro_impl = { path = "./onoro_impl" }
pprof = { version = "0.11", features = ["flamegraph"] }
rand = "0.8"
rayon = "1.7"
criterion = "0.7.0"
itertools = "0.14.0"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"

[[bench]]
name = "onoro"
harness = false

[[bench]]
name = "onoro_view"
harness = false

[profile.profiled]
inherits = "release"
opt-level = 1
lto = "none"
debug = 2
strip = "none"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
