[package]
name = "onoro-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_gen_onoro = { path = "./ai_gen_onoro" }
algebra = { path = "./algebra" }
dashmap = "5.5"
multiqueue = "0.3"
cooperate = { git = "https://github.com/ClaytonKnittel/cooperate.git", rev = "189a2e37c503e2d4f69f7abe0a7b2f79b022bf4f" }
onoro = { path = "./onoro" }
onoro_impl = { path = "./onoro_impl" }
rand = "0.8"
rayon = "1.7"
criterion = "0.7.0"
itertools = "0.14.0"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"

[[bench]]
name = "onoro"
harness = false

[[bench]]
name = "onoro_view"
harness = false

[[bench]]
name = "cooperate"
harness = false

[profile.profiled]
inherits = "release"
opt-level = 3
lto = "thin"
debug = 2
strip = "none"
force-frame-pointers = true

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
