[package]
name = "onoro-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_gen_onoro = { path = "./ai_gen_onoro" }
algebra = { path = "./algebra" }
dashmap = "5.5"
multiqueue = "0.3"
cooperate = { git = "https://github.com/ClaytonKnittel/cooperate.git", rev = "722f5721aea204c67594db3731d9cf31010d4860" }
onoro = { path = "./onoro" }
onoro_impl = { path = "./onoro_impl" }
rayon = "1.7"
criterion = "0.7.0"
itertools = "0.14.0"
rand = "0.9.2"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"

[profile.test]
inherits = "dev"
opt-level = 3

[[bench]]
name = "onoro"
harness = false

[[bench]]
name = "onoro_view"
harness = false

[[bench]]
name = "cooperate"
harness = false

[profile.profiled]
inherits = "release"
opt-level = 3
lto = "thin"
debug = 2
strip = "none"
force-frame-pointers = true

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
