[package]
name = "cooperate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_game = { path = "../abstract_game" }
crossbeam-queue = "0.3"
dashmap = "5.5"
pprof = { version = "0.11", features = ["flamegraph"] }
rand = "0.8"
