[package]
name = "cooperate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_game = { git = "https://github.com/ClaytonKnittel/abstract-game.git", rev = "bc011aff1ab15fbbe8cf24052709b73b976ba9db" }
crossbeam-queue = "0.3"
dashmap = "5.5"
rand = "0.8"
