[package]
name = "onoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_game = { git = "https://github.com/ClaytonKnittel/abstract-game.git", rev = "01fcbba32cb6c57e0cf35becad4aee51d32cde8c" }
algebra = { path = "../algebra" }
const-random = "0.1"
googletest = "0.14.2"
itertools = "0.11"
rand = "0.9.2"
union_find = { path = "../union_find" }
