[package]
name = "onoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_game = { git = "https://github.com/ClaytonKnittel/abstract-game.git", rev = "8f6c581a6a6071b2af57bbc7e24bfcca42a2ace7" }
algebra = { path = "../algebra" }
const-random = "0.1"
googletest = "0.14.2"
itertools = "0.11"
rand = "0.9.2"
union_find = { path = "../union_find" }
