[package]
name = "onoro_impl"
version = "0.1.0"
edition = "2024"

[dependencies]
algebra = { path = "../algebra" }
const-random = "0.1"
itertools = "0.11"
num-traits = { version = "0.2.19", features = ["i128"] }
onoro = { path = "../onoro" }
rand = "0.8"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
union_find = { path = "../union_find" }
