[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_sockets = { path = "modules/async-sockets/rust" }
onoro = { path = "../onoro" }
bytes = "1.5.0"
prost = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["net", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = { version = "0.3.6", features = ["tls"] }
itertools = "0.12.0"

[build-dependencies]
prost-build = "0.12.3"
